--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Solutions for project Euler in Scala
 http://projecteuler.net/
 
 Solved:
-1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 (quite stupid), 20, 21, 22, 24, 67
+1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 (quite stupid), 20, 21, 22, 24, 25, 67
 
 TODO
 Try to use Actor for problem 12
